# templatekit

./: .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  dependencies.yaml  periodic.yaml
docs/: _rst_epilog.rst  conf.py  development-guide.rst  documenteer.toml  index.rst
docs/dev/: development.rst  index.rst  release.rst
docs/template-guide/: index.rst  templatekit-jinja-extensions.rst  templating-yaml-files.rst  workflow.rst
docs/user-guide/: cli-reference.rst  index.rst
src/templatekit/: __init__.py  builder.py  configschema.yaml  filerender.py  jinjaext.py  repo.py  textutils.py
src/templatekit/scripts/: check.py  listtemplates.py  main.py  make.py
templatekit/: __init__.py  builder.py  configschema.yaml  filerender.py  jinjaext.py  repo.py  textutils.py
templatekit/scripts/: check.py  main.py  make.py
tests/: conftest.py  test_base_template.py  test_file_template.py  test_filerender.py  test_jinjaext.py  test_repo.py  test_repo_templateconfig.py  test_textutils.py
tests/data/config/preset/: cookiecutter.json  templatekit.yaml
tests/data/config/preset_groups/: cookiecutter.json  templatekit.yaml
