[metadata]
name = templatekit
description = Tookit for rendering LSST project templates.
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/lsst-sqre/templatekit
project_urls =
    Change log = https://github.com/lsst-sqre/templatekit/main/blob/CHANGELOG.rst
    Source code = https://github.com/lsst-sqre/templatekit
    Issue tracker = https://github.com/lsst-sqre/templatekit/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst
    cookiecutter

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
setup_requires =
    setuptools_scm
install_requires =
    Cerberus>=1.2
    click
    cookiecutter>=1.6.0
    GitPython>=3.0.0
    Jinja2>=2.10
    pyperclip>=1.6.0
    PyYAML>=5.1
    scons>=3.0.1

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage[toml]==6.3.2
    mypy==0.931
    pre-commit==2.17.0
    pytest==7.0.1
    pytest-cov==3.0.0
    types-PyYAML
    # documentation
    documenteer[pipelines]
    sphinx-click

[options.entry_points]
console_scripts =
    templatekit = templatekit.scripts.main:main

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP-8
# W503: line break after binary operator, flake8 disagrees with PEP-8
ignore = E203, W503
exclude =
    docs/conf.py

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
exclude = tests/data
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
